# mssql-spider

./: README.md  pyproject.toml
.github/: dependabot.yml
assets/: default-credentials.txt
extras/: SharpProcedure.cs
mssql_spider/: client.py  impersonated_login.py  impersonated_user.py  linked_instance.py  log.py  main.py  util.py
mssql_spider/modules/: clrexec.py  cmdshell.py  coerce.py  collect.py  dirtree.py  dump.py  exec.py  fileexist.py  fs.py  olecmd.py  openrowset.py  query.py  reg.py  regread.py  sysinfo.py  xpcmdshell.py  xpdirtree.py
mssqlmap/: client.py  connection.py  default.py  model.py  ping.py  spider.py  spray.py  util.py
mssqlmap/discover/: bloodhound.py  main.py
mssqlmap/modules/: clrexec.py  coerce.py  dump.py  enum.py  exec.py  fs.py  impersonated_user.py  linked_instance.py  query.py  reg.py  sysinfo.py
