[tool.poetry]
name = "mssql-spider"
version = "0.6.0"
description = ""
authors = ["dadevel <dadevel@disroot.org>"]
license = "MIT"
packages = [{include = "mssqlmap"}]

[tool.poetry.scripts]
mssql-discover = "mssqlmap.discover.main:main"
mssql-ping = "mssqlmap.ping:main"
mssql-spider = "mssqlmap.spider:main"
mssql-spray = "mssqlmap.spray:main"

[tool.poetry.dependencies]
python = "^3.10"
impacket = {git = "https://github.com/theporgs/impacket.git"}
pydantic = "^2.3.0"
requests = "^2.31.0"
rich = "^13.5.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
