[tool.poetry]
name = "mssql-spider"
version = "0.6.5"
description = ""
authors = ["dadevel <dadevel@disroot.org>"]
license = "MIT"
packages = [{include = "mssqlmap"}]

[tool.poetry.scripts]
mssql-discover = "mssqlmap.discover.main:main"
mssql-ping = "mssqlmap.ping:main"
mssql-spider = "mssqlmap.spider:main"
mssql-spray = "mssqlmap.spray:main"

[tool.poetry.dependencies]
python = "^3.10"
impacket = {git = "https://github.com/theporgs/impacket.git"}
pydantic = "^2.11.7"
requests = "^2.32.5"
rich = "^14.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
